lab-05/lab3/ubi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubi
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: ubi
    spec:
      containers:
      - name: ubi
        image: registry.redhat.io/ubi8/ubi:latest
        command: ["sleep", "infinity"]
        imagePullPolicy: IfNotPresent
