lab-05/lab3/deny-all.yaml
kind: AuthorizationPolicy
apiVersion: security.istio.io/v1beta1
metadata:
  name: deny-all-in-ns
spec: {}
